src/objects/XML_Structure__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting will hold the Notification Hierarchy that is the tags and related sub tags</description>
    <fields>
        <fullName>Create_New_Instance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will store whether to create new instance of related object or not</description>
        <label>Create New Instance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_Object__c</fullName>
        <description>This is the corresponding object api name</description>
        <label>Mapped Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_to_Object_Fields2__c</fullName>
        <description>This is the corresponding Object fields that are mapped to notification fields</description>
        <label>Mapped to Object Fields2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mapped_to_Object_Fields3__c</fullName>
        <description>This is the corresponding Object fields that are mapped to notification fields</description>
        <label>Mapped to Object Fields3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mapped_to_Object_Fields__c</fullName>
        <description>This is the corresponding Object fields that are mapped to notification fields</description>
        <label>Mapped to Object Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <description>multiple child tag parsing based on a new boolean field value</description>
        <label>Multiple Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubTags2__c</fullName>
        <description>This will a comma separated list of all the subtags for the current selected tag</description>
        <label>SubTags2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubTags3__c</fullName>
        <description>This will a comma separated list of all the subtags for the current selected tag</description>
        <label>SubTags3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubTags__c</fullName>
        <description>This will a comma separated list of all the subtags for the current selected tag</description>
        <label>SubTags</label>
        <type>TextArea</type>
    </fields>
    <label>XML Structure</label>
</CustomObject>